<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">On my way</string>
    <string name="action_settings">Labo de Mariavelle Jordan</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Manage path</item>
        <item >Travel</item>

    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_timeline</item>
        <item>@drawable/ic_explore</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- texviews values -->
    <string name="textviewName">Name:</string>
    <string name="textViewAdressStart">Departure address:</string>
    <string name="textViewPositionStart">Departure position:</string>
    <string name="textViewPosition">GPS position:  (long/lat)</string>

    <!-- buttons name -->
    <string name="buttonAdd">Add</string>
    <string name="buttonRemove">Remove</string>
    <string name="buttonCreate">Create</string>

    <!-- listview Step -->
    <string name="positionListViewText">Position:</string>



</resources>
